--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "lucide-react": "^0.344.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "puppeteer": "^22.3.0",
-    "node-fetch": "^3.3.2",
-    "form-data": "^4.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
-    "cors": "^2.8.5",
-    "multer": "^1.4.5-lts.1"
+    "form-data": "^4.0.0",
+    "lucide-react": "^0.344.0",
+    "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.2",
+    "puppeteer": "^22.15.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
@@ -37,5 +37,18 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2"
-  }
+  },
+  "description": "A web application that translates PDF documents while preserving their original formatting. The application provides both side-by-side comparison and translated-only versions of the documents.",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ofurkancoban/PDFTranslator.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ofurkancoban/PDFTranslator/issues"
+  },
+  "homepage": "https://github.com/ofurkancoban/PDFTranslator#readme"
 }
