--- a/fly.toml
+++ b/fly.toml
@@ -1,29 +1,23 @@
-[experimental]
-  allowed_public_ports = [80, 443]
-  auto_rollback = true
+# fly.toml app configuration file generated for pdftranslator on 2025-05-14T10:02:04Z
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
 
+app = 'pdftranslator'
+primary_region = 'fra'
 
-[env]
-  PORT = "3000"
+[build]
 
-[[services]]
+[http_service]
   internal_port = 3000
-  protocol = "tcp"
-  [services.concurrency]
-    hard_limit = 25
-    soft_limit = 20
-    type = "connections"
-  [[services.ports]]
-    handlers = ["http"]
-    port = 80
-  [[services.ports]]
-    handlers = ["tls", "http"]
-    port = 443
-  [services.http_checks]
-    interval = 10000
-    timeout = 200
-    grace_period = "5s"
-    method = "get"
-    path = "/"
-    protocol = "http"
-    tls_skip_verify = false
+  force_https = true
+  auto_stop_machines = 'stop'
+  auto_start_machines = true
+  min_machines_running = 0
+  processes = ['app']
+
+[[vm]]
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
+  memory_mb = 1024
