--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -4,7 +4,7 @@ aptPkgs = [
   "chromium-driver",
   "fonts-liberation",
   "fonts-noto-color-emoji",
-  "libasound2",
+  "libasound2t64",
   "libatk-bridge2.0-0",
   "libatk1.0-0",
   "libcups2",
