--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -4,18 +4,50 @@ aptPkgs = [
   "chromium-driver",
   "fonts-liberation",
   "fonts-noto-color-emoji",
+  "fonts-ipafont-gothic",
+  "fonts-wqy-zenhei",
+  "fonts-thai-tlwg",
+  "fonts-kacst",
+  "fonts-freefont-ttf",
   "libasound2t64",
   "libatk-bridge2.0-0",
   "libatk1.0-0",
+  "libc6",
+  "libcairo2",
   "libcups2",
-  "libdrm2",
+  "libdbus-1-3",
+  "libexpat1",
+  "libfontconfig1",
   "libgbm1",
+  "libgcc1",
+  "libglib2.0-0",
   "libgtk-3-0",
   "libnspr4",
   "libnss3",
+  "libpango-1.0-0",
+  "libpangocairo-1.0-0",
+  "libstdc++6",
+  "libx11-6",
+  "libx11-xcb1",
+  "libxcb1",
   "libxcomposite1",
+  "libxcursor1",
   "libxdamage1",
+  "libxext6",
+  "libxfixes3",
+  "libxi6",
   "libxrandr2",
-  "libxshmfence1",
+  "libxrender1",
+  "libxss1",
+  "libxtst6",
+  "libgconf-2-4",
+  "libgdk-pixbuf2.0-0",
+  "libnotify4",
+  "libsqlite3-0",
+  "libxinerama1",
+  "libxslt1.1",
+  "libuuid1",
+  "lsb-release",
+  "wget",
   "xdg-utils"
 ]
